AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = 	autogen.sh TODO README ./kernel/kbalancer.c ./kernel/kbalancer.h ./kernel/Makefile ./kernel/Kbuild

SUBDIRS = 	src 

MAINTAINERCLEANFILES = config.h.in Makefile.in configure stamp-h1 config.log \
	ltmain.sh missing install-sh depcomp config.sub config.guess aclocal.m4
 
